# enviro-client

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check-install.py  enviro.service  enviro.yml  install.sh  install_service.sh  pyproject.toml  setup.cfg  upload.sh
.github/workflows/: build.yml  deploy.yml
enviro_client/: __init__.py  config.py  console.py  demo.py  display.py  enviro.py  mqtt.py  noise.py  sensors.py
enviro_client/sensors/: __init__.py  base.py  humidity.py  light.py  noise.py
examples/: adc.py  all-in-one-enviro-mini.py  all-in-one-no-pm.py  all-in-one.py  combined.py  compensated-temperature.py  enviro_interface.py  gas.py  lcd.py  light.py  luftdaten.py  mqtt-all.py  noise-amps-at-freqs.py  noise-profile.py  particulates.py  weather-and-light.py  weather.py
rpi_enviro_monitor/: __init__.py  app.py  display.py  enviro.py  mqtt.py
rpi_enviro_monitor/sensors/: __init__.py  base.py  bme280.py  humidity.py  light.py  ltr559.py  noise.py  sph0645.py
